# agentmeter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PROJECT_BRIEF.md  README.md  pyproject.toml  wrap-mailsift.sh
.github/workflows/: test.yml
.specify/memory/: constitution.md
reports/: agent-economics-strategy.html
specs/: api-metering.md  cache-intelligence.md  coaching.md  hook-metering.md  session-token-reader.md  universal-session-reader.md
src/agentmeter/: __init__.py  __main__.py  cli.py  cli_advise.py  cli_breaker.py  cli_budget.py  cli_coach.py  cli_cost.py  cli_dashboard.py  cli_export.py  cli_forecast.py  cli_format.py  cli_hook.py  cli_model.py  cli_rates.py  cli_strategy.py  cli_summary.py  cli_value.py  db.py  heuristics.py  hook.py  models.py  outcomes.py  platform.py  proxy.py  session_reader.py
src/agentmeter/db/: __init__.py  _helpers.py  analytics.py  breaker.py  budget.py  calls.py  rates.py  schema.py  sessions.py
src/agentmeter/hooks/: __init__.py  __main__.py  base.py  claude.py  coach.py  codex.py  copilot.py  gemini.py
src/agentmeter/web/: index.html
tests/: TEST_STRATEGY.md  conftest.py  test_boundaries.py  test_breaker.py  test_budget.py  test_cli.py  test_db.py  test_heuristics.py  test_hook.py  test_hooks.py  test_integration.py  test_outcomes.py  test_proxy.py  test_security.py  test_server.py  test_session_reader.py
