[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-usage"
version = "0.1.1"
description = "The missing economics layer for MCP agents. Meter every tool call."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "mcp>=1.0",
    "click>=8.0",
    "anyio>=4.0",
]

[project.scripts]
agentmeter = "agentmeter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmeter"]

[tool.hatch.build.targets.wheel.force-include]

[tool.hatch.build]
exclude = [
    "src/agentmeter/cli_cost.py",
    "src/agentmeter/cli_forecast.py",
    "src/agentmeter/cli_advise.py",
    "src/agentmeter/cli_strategy.py",
    "src/agentmeter/cli_summary.py",
    "src/agentmeter/cli_export.py",
    "src/agentmeter/cli_dashboard.py",
    "src/agentmeter/session_reader.py",
    "src/agentmeter/heuristics.py",
    "src/agentmeter/web/",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "PLW"]

[tool.pytest.ini_options]
testpaths = ["tests"]
