[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-usage"
version = "0.2.0"
description = "Know what your agents cost. Cost intelligence for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "mcp>=1.0",
    "click>=8.0",
    "anyio>=4.0",
]

[project.urls]
Homepage = "https://github.com/aussiealex/agentmeter"
Repository = "https://github.com/aussiealex/agentmeter"
Issues = "https://github.com/aussiealex/agentmeter/issues"

[project.scripts]
agentmeter = "agentmeter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmeter"]

[tool.hatch.build.targets.wheel.force-include]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "PLW"]

[tool.pytest.ini_options]
testpaths = ["tests"]
